# thurstone

./: .gitignore  .isort.cfg  BACKGROUND.md  CONTRIBUTING.md  Cargo.toml  DIFFEOMORPHISMS.md  DYNAMIC.md  LITERATURE.md  MALLOWS_CRITIQUE.md  README.md  RESEARCH_EXECUTION_PLAN.md  RESUME.md  fix_isort.py  pyproject.toml  requirements-dev.txt  rust-toolchain.toml  test_integration.py
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  pages.yml  static.yml
docs/: CNAME  README.md  bundle-demo.html  index.html  minimal-es-test.html  package.json  test-bundle.html  test-demo-import.html  test-modules.html  test-simple-import.html
docs/demos/: density-playground.html  forward-pricing.html  index.html  inverse-calibration.html  loc-scale-2d.html  multi-race-stitching.html  reversibility.html  triple-crown.html  walkover-ties.html
docs/fixtures/: density_skewnormal.json  density_transforms.json  global_fit.json  global_ls.json  inverse_roundtrip.json  normaldist.json  race_state_prices.json  state_prices_from_ability.json  winner_of_many.json
docs/interactive/: diffeomorphism-explorer-backup.html  diffeomorphism-explorer.html  index.html
docs/interactive/data/: asymmetric_mapping.json  symmetric_mapping.json
docs/js/: README-bundle.md  thurstone-bundle.js
docs/js/thurstone/: clustering.js  density.js  global_fit.js  global_ls.js  index.d.ts  index.js  inference.js  lattice.js  multiray.js  normaldist.js  order_stats.js  pricing.js
docs/pages/: api-reference.html  fast-transform.html  multi-dimensional.html  rating-systems.html  thurstone.html
docs/styles/: main.css
docs/tests/: _helpers.js  density.test.js  global_fit.test.js  global_ls.test.js  inference.test.js  normaldist.test.js  pricing.test.js  smoke.test.js
examples/: calibrate_with_scales_150.py  calibrate_with_walkovers.py  diffeomorphism_demo.py  dynamic_calibration_demo.py  global_calibration_compare.py  global_calibration_demo.py  global_calibration_ls_demo.py  global_calibration_noisy.py  kalman_tracker_demo.py  multiray_synthetic.py  plot_offset_densities_150.py
research/: README.md  generate_paper_figures.py  monitor_progress.py  paper_draft.md  run_systematic_study.py  special_horse_study.py  study_design.md
research/special_horse_results/: optimal_configuration.json  study_summary.json
research/study_results/: mini_study_sample.json
scripts/: format-code.py  generate_fixtures.py  review.py
special_horse_results/: special_horse_systematic_20260523_221337.json
src/: clustering.rs  density.rs  dynamic.rs  global_fit.rs  global_ls.rs  inference.rs  kalman_tracker.rs  lattice.rs  lib.rs  normaldist.rs  order_stats.rs  pricing.rs  sim_world.rs
tests/: conftest.py  test_basic.py  test_clustering.py  test_density_core.py  test_forward_clustering.py  test_inverse_additional.py  test_inverse_roundtrip.py  test_monte_carlo_check.py  test_multiplicity.py  test_multiray_synthetic.py  test_perf.py  test_properties.py
thurstone/: LITERATURE.md  __init__.py  adaptive_special_horse.py  clustering.py  conventions.py  cube_to_simplex.py  density.py  dynamic.py  enhanced_cube_to_simplex.py  enhanced_optimization.py  export_data.py  global_fit.py  global_ls.py  inference.py  kalman_tracker.py  lattice.py  multiray.py  normaldist.py  optimization.py  order_stats.py  pricing.py  pure_optimizers.py  quality_assessment.py  sim_world.py  visualization.py
