[package]
name = "thurstone"
version = "0.1.0"
edition = "2021"

[lib]
name = "thurstone"
crate-type = ["cdylib"]

[dependencies]
libm = "0.2.15"
ndarray = "0.16.1"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
numpy = "0.25.0"
rand = "0.8"
rand_pcg = "0.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
