
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thurstone"
version = "0.0.1"
description = "OO toolkit for lattice-based performance models and the horse-race inverse problem"
authors = [{name="Peter Cotton", email="peter.cotton@microprediction.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "numpy>=1.23",
    "hypothesis>=6.0",
    "pytest-benchmark>=4.0",
]
viz = [
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
# Prevent emojis and other special characters
select = ["E", "W", "F", "C90", "B"]
ignore = ["E203"]  # Black conflicts with whitespace before ':'
ban-relative-imports = "true"
max-line-length = 127
max-complexity = 25  # Allow complex functions (highest current complexity is 20)
