[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thurstone"
version = "0.0.1"
description = "OO toolkit for lattice-based performance models and the horse-race inverse problem"
authors = [{name="Peter Cotton", email="peter.cotton@microprediction.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "numpy>=1.23",
    "hypothesis>=6.0",
    "pytest-benchmark>=4.0",
]
viz = [
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
# Use single quotes for strings
quote-style = "double"

[tool.ruff.lint]
# Enable essential error detection
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
]