[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thurstone"
version = "0.0.1"
description = "OO toolkit for lattice-based performance models and the horse-race inverse problem"
authors = [{name="Peter Cotton", email="peter.cotton@microprediction.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "numpy>=1.23",
    "hypothesis>=6.0",
    "pytest-benchmark>=4.0",
]
viz = [
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100  # More reasonable line length
target-version = "py311"

[tool.ruff.format]
# Use single quotes for strings
quote-style = "double"

[tool.ruff.lint]
# Enable essential error detection, but be reasonable
select = [
    "E9",   # Only critical syntax errors
    "F63",  # Syntax errors
    "F7",   # Syntax errors
    "F82",  # Undefined names
    "I",    # isort
]
# Ignore some overly pedantic rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "F401",  # Unused imports (common in __init__.py files)
    "F841",  # Unused variables (sometimes needed for clarity)
    "F541",  # f-string without placeholders
    "E741",  # Ambiguous variable names like 'l'
]